// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayStudentHighlight component when the student is in reflection renders 1`] = `
<DisplayStudentHighlight
  inReflection={true}
  removeHighlight={[Function]}
  studentHighlight="This is a sentence I chose to highlight."
>
  <div
    className="display-student-highlight"
  >
    <span>
      This is a sentence I chose to highlight.
    </span>
    <span />
  </div>
</DisplayStudentHighlight>
`;

exports[`DisplayStudentHighlight component when the student is on the read passage step renders 1`] = `
<DisplayStudentHighlight
  inReflection={false}
  removeHighlight={[Function]}
  studentHighlight="This is a sentence I chose to highlight."
>
  <div
    className="display-student-highlight"
  >
    <span>
      This is a sentence I chose to highlight.
    </span>
    <button
      aria-label="Remove highlight from the following sentence: This is a sentence I chose to highlight."
      className="interactive-wrapper focus-on-light"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="Icon showing a gray circle with a horizontal white line inside of it"
        src="undefined/images/icons/icons-remove.svg"
      />
    </button>
  </div>
</DisplayStudentHighlight>
`;
